2003-12-18  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (mips_need_elf_addend_fixup): Delete.
	(md_apply_fix3): Remove bfd_install_relocation workarounds.
	(tc_gen_reloc): Likewise. Factor handling of pc-relative relocations
	and treat fx_addnumber as relative to the relocation address.

2003-12-18  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (s_change_section): When parsing the MIPS-specific
	.section syntax, map SHT_MIPS_DWARF to SHT_PROGBITS.

2003-12-17  Mark Mitchell  <mark@codesourcery.com>

	* config/tc-arm.c (arm_archs): Change "armv6" to "armv6j".
	* doc/c-arm.texi (ARM Options): Likewise.

2003-12-17  Nick Clifton  <nickc@redhat.com>

	* config/tc-m32r.c (error_explicit_parallel_conflicts): Rename
        to 'ignore_parallel_conflicts'.
        (md_longopts): Change option names as well.
        (md_parse_option): Separate the	warn_explicit and ignore
        parallel conflicts options.
        (md_show_usage): Update descriptions of these options.
        (first_writes_to_seconds_operands): Do not run this check if
        ignoring parallel conflicts.
        (assemble_two_insns): Remove code that checked
        error_explicit_parallel_conflicts.
        * doc/c-m32r.texi: Update descriptions of the options.
        
2003-12-16  Dmitry Semyonov  <Dmitry.Semyonov@oktet.ru>

	* tc-arm.c (do_adr): Do not adjust pc by -8 if TE_WINCE is
	defined.
	(do_adrl): Likewise.

2003-12-15  Christian Groessler  <chris@groessler.org>

	* config/tc-z8k.c (struct z8k_exp): Remove, not used anywhere.
	(ctrl_table): Add "flags" keyword and some comments.
	(flag_table): Convert to uppercase.
	(get_flags_operand): Be case insensitive.
	(get_interrupt_operand): Be case insensitive.  Support notation
	where the inperrupt arguments are separated by commas.
	(get_operands): Check whether get_flags_operand consumed all
	arguments.  Return failure if get_ctrl_operand didn't recognize a
	valid control register.